--- a/web/themes/custom/relaunch2018/scss/nodes/node-type--page.scss
+++ b/web/themes/custom/relaunch2018/scss/nodes/node-type--page.scss
@@ -1,6 +1,8 @@
 @import '../_includes/base';
 
 .page-node-type-page {
+  overflow-x: hidden;
+
   h2 {
     color: $color-main;
   }
